--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Haitong Li"
-  avatar           : "profile.png"
+  avatar           : "Haitong_website_avatar.png"
   bio              : "PhD Candidate in Electrical Engineering at Stanford University"
   location         : "Stanford, California"
   employer         :
