--- a/_config.yml
+++ b/_config.yml
@@ -73,9 +73,9 @@ social:
 
 # Analytics
 analytics:
-  provider               :  "google-universal" # false (default), "google", "google-universal", "custom"
+  provider               :  "google-gtag" # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
-    tracking_id          : UA-141815718-1
+    tracking_id          : "UA-141815718-1"
 
 
 # Site Author
