change homepage name

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Haitong Li's Homepage"
+title                    : "Haitong Li"
 title_separator          : "-"
 name                     : &name "Haitong Li"
 description              : &description "EE PhD Candidate at Stanford University"
